<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:padding="40dp"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_acb_logo_big"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_user_name"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="?android:textColorHint"
        >
        <EditText
            android:id="@+id/edt_user_name"
            android:hint="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_width="match_parent"
        android:textColorHint="?android:textColorHint"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/edt_password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_large_border"
        android:text="@string/login"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/white"/>

</LinearLayout>